--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,11 +1,16 @@
 $color-banner: #B1A7A6;
-$color-text: #0B090A;
+$color-text: #0B091A;
 
 * {
 
     font-family: 'Mulish', sans-serif;
     margin: 0;
     padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: $color-text;
 }
 
 .nav {
@@ -18,11 +23,11 @@ $color-text: #0B090A;
         color: $color-text;
         display: flex;
         align-items: center;
-        list-style-type: none;
         
         &__item {
-            margin: 20px;
+            margin: 18px;
             font-size: 24px;
+            padding: 6px;
         }
     }
 
@@ -31,10 +36,82 @@ $color-text: #0B090A;
         display: flex;
         align-items: center;
         list-style-type: none;
+        
 
         &__item {
             margin: 20px;
             font-size: 24px;
+        }
+    }
+}
+
+.today {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    &__title {
+        margin: 40px 0;
+        font-size: 30px;
+        font-weight: bold;
+    }
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+
+        &__item {
+            display: flex;
+            width: 100%;
+            border: 1px solid $color-banner;
+        }
+
+        &__time {
+            width: 10%;
+            border: 1px solid $color-banner;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+        }
+
+        &__subgroup {
+            width: 45%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid $color-banner;
+            padding: 10px;
+            box-sizing: border-box;
+
+            &--full {
+                width: 90%;
+            }
+
+            &__title {
+                font-size: 24px;
+                font-weight: bold;
+            }
+
+            &__type {
+                font-size: 16px;
+            }
+
+            &__professor {
+                font-size: 22px;
+                margin: 10px 0;
+            }
+
+            &__place {
+                font-size: 16px;
+            }
+
+            &__link {
+                font-size: 16px;
+            }
         }
     }
 }
