--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -165,6 +165,10 @@ a {
         flex-direction: column;
         width: 80%;
 
+        &--month {
+            width: auto;
+        }
+
         &__item {
             display: flex;
             width: 100%;
@@ -219,26 +223,27 @@ a {
     }
 }
 
-.name__of__choosen__group{
+.name__of__choosen__group {
     text-align: center;
     margin-top: 20px;
     font-size: 23px;
 }
 
-.month__container{
+.month__container {
     // width: 80%;
     max-width: 1300px;
     margin: 0 auto;
     justify-content: center;
 }
 
-.month__calendar{
+.month__calendar {
     height: 564px;
     width: 658px;
     margin: 20px;
     display: grid;
     grid-template-columns: 90px 90px 90px 90px 90px 90px 90px;
     grid-template-rows: 90px 90px 90px 90px 90px 90px;
+
     &__and__schedule{
         display: flex;
         flex-direction: row;
@@ -246,7 +251,7 @@ a {
     }
 }
    
-.month__day{
+.month__day {
     background-color: #E32629;
     border: #741C1C solid 2px;
     height: 90px;
@@ -258,9 +263,6 @@ a {
     font-size: 22px;
 }
 
-
-
-
 .month__schedule{
     // height: 540px;
     width: 502px;
@@ -268,87 +270,13 @@ a {
     margin: 20px;
     border: 2px solid $color-banner;
 
-    &__header{
-    background-color: #161A1D;
-    width: auto;
-    height: 50px;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-}
-
-
-.today {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    
-
-    &__title {
-        border: 1px solid $color-banner;
-        font-size: 30px;
-        font-weight: bold;
-        width: 500px;
-    }
-
-    &__container {
+    &__header {
+        background-color: #161A1D;
+        width: auto;
+        height: 50px;
+        color: white;
         display: flex;
-        flex-direction: column;
-        // width: 80%;
-
-        &__item {
-            display: flex;
-            width: 100%;
-            border: 1px solid $color-banner;
-        }
-
-        &__time {
-            width: 10%;
-            border: 1px solid $color-banner;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-        }
-
-        &__subgroup {
-            width: 45%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            border: 1px solid $color-banner;
-            padding: 10px;
-            box-sizing: border-box;
-
-            &--full {
-                width: 90%;
-            }
-
-            &__title {
-                font-size: 24px;
-                font-weight: bold;
-            }
-
-            &__type {
-                font-size: 16px;
-            }
-
-            &__professor {
-                font-size: 22px;
-                margin: 10px 0;
-            }
-
-            &__place {
-                font-size: 16px;
-            }
-
-            &__link {
-                font-size: 16px;
-            }
-        }
+        align-items: center;
+        justify-content: center;
     }
 }
