--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -5,6 +5,9 @@
     margin: 0;
     padding: 0;
 }
+body {
+    background-color: $color-80;
+}
 
 a {
     text-decoration: none;
@@ -154,6 +157,50 @@ a {
             &:hover {
                 color: $color-20;
             }
+        }
+    }
+}
+
+.no-group {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    &__content {
+        position: absolute;
+        display: block;
+        text-align: center;
+        margin: 235px 618px 483px 618px;
+
+        @media screen and (max-width: 1440px){
+            margin: 225px 378px 437px 378px;
+        }
+        @media screen and (max-width: 768px){
+            margin: 150px 42px 382px 42px;
+        }
+        @media screen and (max-width: 440px){
+            margin: 100px 28px 379px 28px;
+        }
+    }
+
+    &__text {
+        font-style: normal;
+        font-size: 36px;
+        line-height: 44px;
+        color: $color-10;
+        margin-bottom: 30px;
+        @media screen and (max-width: 360px){
+            font-size: 24px;
+            line-height: 29px;
+            margin-bottom: 10px;
+        }
+    }
+    &__icon {
+        width: 150px;
+        height: 150px;
+        @media screen and (max-width: 360px){
+            width: 100px;
+            height: 100px;
         }
     }
 }
