--- a/src/style/today.scss
+++ b/src/style/today.scss
@@ -1,21 +1,82 @@
-@import 'style';
+@import "style";
 
 .today {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 100px;
+    padding-bottom: 27px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background: $color-90;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    @media screen and (max-width: 768px) {
+        width: 80%;
+    }
+    @media screen and (max-width: 736px) {
+        width: 95%;
+    }
 
     &__title {
-        margin: 40px 0;
-        font-size: 30px;
-        font-weight: bold;
+        margin: 21px 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        @media screen and (max-width: 768px) {
+            margin: 18px 0;
+        }
+        @media screen and (max-width: 426px) {
+            margin: 7px 0;
+        }
+        &__date {
+            font-style: normal;
+            font-weight: normal;
+            font-size: 40px;
+            line-height: 49px;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            text-transform: uppercase;
+            color: $color-20;
+            @media screen and (max-width: 768px) {
+                font-size: 34px;
+                line-height: 41px;
+            }
+            @media screen and (max-width: 426px) {
+                font-size: 26px;
+                line-height: 32px;
+            }
+        }
+        &__day {
+            font-style: normal;
+            font-weight: normal;
+            font-size: 24px;
+            line-height: 29px;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            color: $color-60;
+            @media screen and (max-width: 768px) {
+                font-size: 20px;
+                line-height: 24px;
+            }
+            @media screen and (max-width: 425px) {
+                font-size: 16px;
+                line-height: 19px;
+            }
+        }
     }
 
     &__container {
         display: flex;
         flex-direction: column;
-        width: 80%;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 95%;
 
         &--month {
             width: auto;
@@ -24,16 +85,28 @@
         &__item {
             display: flex;
             width: 100%;
-            border: 1px solid $color-banner;
+            margin-bottom: 5px;
         }
 
         &__time {
             width: 10%;
-            border: 1px solid $color-banner;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 24px;
+            line-height: 29px;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 20px;
+            text-align: center;
+            color: $color-10;
+            @media screen and (max-width: 1920px) {
+                font-size: 18px;
+                line-height: 22px;
+            }
+            @media screen and (max-width: 426px) {
+                font-size: 12px;
+                line-height: 16px;
+            }
         }
 
         &__subgroup {
@@ -42,34 +115,126 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            border: 1px solid $color-banner;
-            padding: 10px;
-            box-sizing: border-box;
+            padding: 13px 0;
+            border-radius: 5px;
+            background-color: $color-80;
+
+            &__title {
+                background-color: $color-90;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 22px;
+                color: $color-10;
+                @media screen and (max-width: 426px) {
+                    font-size: 14px;
+                    line-height: 17px;
+                }
+            }
+
+            &--horizontal-line {
+                width: 30%;
+                height: 1px;
+                border-width: 0;
+                color: $color-10;
+                background-color: $color-10;
+            }
+
+            &--vertical-line {
+                margin: auto;
+                width: 1px;
+                height: 136px;
+                border-width: 0;
+                color: $color-60;
+                background-color: $color-60;
+                @media screen and (max-width: 426px) {
+                    height: 84px;
+                }
+            }
 
             &--full {
                 width: 90%;
             }
 
-            &__title {
-                font-size: 24px;
-                font-weight: bold;
+            &--changedcolor {
+                background-color: $color-40-lighter;
+            }
+
+            &__subject {
+                font-style: normal;
+                font-weight: normal;
+                font-size: 19px;
+                line-height: 23px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                color: $color-10;
+                @media screen and (max-width: 426px) {
+                    font-size: 14px;
+                    line-height: 17px;
+                }
             }
 
             &__type {
-                font-size: 16px;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 12px;
+                line-height: 15px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                color: $color-20;
+                margin-bottom: 25px;
+                @media screen and (max-width: 426px) {
+                    font-size: 10px;
+                    line-height: 12px;
+                }
             }
 
             &__professor {
-                font-size: 22px;
-                margin: 10px 0;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 22px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                color: $color-10;
+                margin-bottom: 27px;
+                @media screen and (max-width: 426px) {
+                    font-size: 10px;
+                    line-height: 12px;
+                }
             }
 
             &__place {
-                font-size: 16px;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 22px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                color: $color-20;
+                @media screen and (max-width: 426px) {
+                    font-size: 10px;
+                    line-height: 12px;
+                }
             }
 
             &__link {
-                font-size: 16px;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 22px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                color: $color-20;
+                @media screen and (max-width: 426px) {
+                    font-size: 12px;
+                    line-height: 15px;
+                }
             }
         }
     }
