--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -5,6 +5,7 @@ $color-10: #161a1d;
 $color-20: #660708;
 $color-30: #a4161a;
 $color-40: #ba181b;
+$color-40-lighter: rgba($color-40, 0.1);
 $color-50: #e5383b;
 $color-60: #b1a7a6;
 $color-70: #d3d3d3;
