--- a/src/style/today.scss
+++ b/src/style/today.scss
@@ -2,70 +2,67 @@
 
 .today {
     width: 90%;
-    margin: auto;
-    margin-bottom: 100px;
-    padding-bottom: 27px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    padding: 20px;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     background: $color-90;
     box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+    height: calc(100% - 185px);
+
+    @media screen and (max-width: 960px) {
+        height: calc(100% - 175px);
+    }
+
     @media screen and (max-width: 768px) {
         width: 80%;
+        padding: 10px;
+        height: calc(100% - 155px);
     }
-    @media screen and (max-width: 736px) {
-        width: 95%;
+
+    @media screen and (max-width: 660px) {
+        height: calc(100% - 115px);
+        width: 90%;
     }
 
     &__title {
-        margin: 21px 0;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        @media screen and (max-width: 768px) {
-            margin: 18px 0;
-        }
-        @media screen and (max-width: 426px) {
-            margin: 7px 0;
-        }
+
         &__date {
             font-style: normal;
             font-weight: normal;
-            font-size: 40px;
-            line-height: 49px;
+            font-size: 30px;
             display: flex;
             align-items: center;
             text-align: center;
             text-transform: uppercase;
             color: $color-20;
             @media screen and (max-width: 768px) {
-                font-size: 34px;
-                line-height: 41px;
+                font-size: 28px;
             }
-            @media screen and (max-width: 426px) {
-                font-size: 26px;
-                line-height: 32px;
+            @media screen and (max-width: 560px) {
+                font-size: 24px;
             }
         }
         &__day {
             font-style: normal;
             font-weight: normal;
-            font-size: 24px;
-            line-height: 29px;
+            font-size: 18px;
             display: flex;
             align-items: center;
             text-align: center;
             color: $color-60;
             @media screen and (max-width: 768px) {
-                font-size: 20px;
-                line-height: 24px;
+                font-size: 18px;
             }
-            @media screen and (max-width: 425px) {
+            @media screen and (max-width: 560px) {
                 font-size: 16px;
-                line-height: 19px;
             }
         }
     }
@@ -76,7 +73,8 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        width: 95%;
+        width: 100%;
+        height: 100%;
 
         &--month {
             width: auto;
@@ -86,6 +84,15 @@
             display: flex;
             width: 100%;
             margin-bottom: 5px;
+            height: 24%;
+
+            &--subgroups {
+                height: 4%;
+            }
+
+            &:last-child {
+                margin-bottom: 0;
+            }
         }
 
         &__time {
@@ -93,7 +100,6 @@
             font-style: normal;
             font-weight: normal;
             font-size: 24px;
-            line-height: 29px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -101,11 +107,9 @@
             color: $color-10;
             @media screen and (max-width: 1920px) {
                 font-size: 18px;
-                line-height: 22px;
             }
-            @media screen and (max-width: 426px) {
-                font-size: 12px;
-                line-height: 16px;
+            @media screen and (max-width: 560px) {
+                font-size: 14px;
             }
         }
 
@@ -114,21 +118,20 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            padding: 13px 0;
+            justify-content: space-around;
+            padding: 10px 0;
             border-radius: 5px;
             background-color: $color-80;
 
             &__title {
-                background-color: $color-90;
+                width: 45%;
                 font-style: normal;
                 font-weight: normal;
                 font-size: 18px;
-                line-height: 22px;
                 color: $color-10;
-                @media screen and (max-width: 426px) {
-                    font-size: 14px;
-                    line-height: 17px;
+
+                @media screen and (max-width: 560px) {
+                    font-size: 12px;
                 }
             }
 
@@ -141,14 +144,14 @@
             }
 
             &--vertical-line {
-                margin: auto;
+                margin: 10px 0;
                 width: 1px;
-                height: 136px;
                 border-width: 0;
                 color: $color-60;
-                background-color: $color-60;
-                @media screen and (max-width: 426px) {
-                    height: 84px;
+                background-color: $color-70;
+
+                &--red {
+                    background-color: $color-60;
                 }
             }
 
@@ -164,14 +167,12 @@
                 font-style: normal;
                 font-weight: normal;
                 font-size: 19px;
-                line-height: 23px;
                 display: flex;
                 align-items: center;
                 text-align: center;
                 color: $color-10;
-                @media screen and (max-width: 426px) {
+                @media screen and (max-width: 560px) {
                     font-size: 14px;
-                    line-height: 17px;
                 }
             }
 
@@ -179,15 +180,12 @@
                 font-style: normal;
                 font-weight: normal;
                 font-size: 12px;
-                line-height: 15px;
                 display: flex;
                 align-items: center;
                 text-align: center;
                 color: $color-20;
-                margin-bottom: 25px;
-                @media screen and (max-width: 426px) {
+                @media screen and (max-width: 560px) {
                     font-size: 10px;
-                    line-height: 12px;
                 }
             }
 
@@ -195,15 +193,12 @@
                 font-style: normal;
                 font-weight: normal;
                 font-size: 18px;
-                line-height: 22px;
                 display: flex;
                 align-items: center;
                 text-align: center;
                 color: $color-10;
-                margin-bottom: 27px;
-                @media screen and (max-width: 426px) {
-                    font-size: 10px;
-                    line-height: 12px;
+                @media screen and (max-width: 560px) {
+                    font-size: 12px;
                 }
             }
 
@@ -211,14 +206,12 @@
                 font-style: normal;
                 font-weight: normal;
                 font-size: 18px;
-                line-height: 22px;
                 display: flex;
                 align-items: center;
                 text-align: center;
                 color: $color-20;
-                @media screen and (max-width: 426px) {
-                    font-size: 10px;
-                    line-height: 12px;
+                @media screen and (max-width: 560px) {
+                    font-size: 12px;
                 }
             }
 
@@ -226,14 +219,12 @@
                 font-style: normal;
                 font-weight: normal;
                 font-size: 18px;
-                line-height: 22px;
                 display: flex;
                 align-items: center;
                 text-align: center;
                 color: $color-20;
-                @media screen and (max-width: 426px) {
+                @media screen and (max-width: 560px) {
                     font-size: 12px;
-                    line-height: 15px;
                 }
             }
         }
