--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -161,22 +161,30 @@ a {
 .no-group {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 113px);
+
+    @media screen and (max-width: 960px) {
+        height: calc(100% - 103px);
+    }
+
+    @media screen and (max-width: 660px) {
+        height: calc(100% - 85px);
+    }
 
     &__content {
         position: absolute;
         display: block;
         text-align: center;
-        margin: 235px 618px 483px 618px;
+        margin: 150px 618px 483px 618px;
 
         @media screen and (max-width: 1440px){
-            margin: 225px 378px 437px 378px;
+            margin: 150px 378px 437px 378px;
         }
         @media screen and (max-width: 768px){
-            margin: 150px 42px 382px 42px;
+            margin: 120px 42px 382px 42px;
         }
         @media screen and (max-width: 440px){
-            margin: 100px 28px 379px 28px;
+            margin: 50px 28px 379px 28px;
         }
     }
 
