--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,7 +1,7 @@
-@import 'variables';
+@import "variables";
 
 * {
-    font-family: 'Ruda', sans-serif;
+    font-family: "Ruda", sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -162,6 +162,8 @@ a {
     position: relative;
     width: 100%;
     height: calc(100% - 113px);
+    opacity: 1;
+    visibility: visible;
 
     @media screen and (max-width: 960px) {
         height: calc(100% - 103px);
@@ -177,13 +179,13 @@ a {
         text-align: center;
         margin: 150px 618px 483px 618px;
 
-        @media screen and (max-width: 1440px){
+        @media screen and (max-width: 1440px) {
             margin: 150px 378px 437px 378px;
         }
-        @media screen and (max-width: 768px){
+        @media screen and (max-width: 768px) {
             margin: 120px 42px 382px 42px;
         }
-        @media screen and (max-width: 440px){
+        @media screen and (max-width: 440px) {
             margin: 50px 28px 379px 28px;
         }
     }
@@ -194,18 +196,139 @@ a {
         line-height: 44px;
         color: $color-10;
         margin-bottom: 30px;
-        @media screen and (max-width: 360px){
+        @media screen and (max-width: 360px) {
             font-size: 24px;
-            line-height: 29px;
             margin-bottom: 10px;
         }
     }
     &__icon {
         width: 150px;
         height: 150px;
-        @media screen and (max-width: 360px){
+        @media screen and (max-width: 360px) {
             width: 100px;
             height: 100px;
         }
     }
+}
+
+.pop-up {
+    width: 30%;
+    height: 80%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    background: $color-80;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    opacity: 0;
+    visibility: hidden;
+    @media screen and (max-width: 1440px) {
+        width: 40%;
+    }
+    @media screen and (max-width: 1024px) {
+        width: 50%;
+    }
+    @media screen and (max-width: 768px) {
+       width: 60%;
+    }
+    @media screen and (max-width: 640px) {
+        width: 80%;
+    }
+    @media screen and (max-width: 475px) {
+        width: 95%;
+    }
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 20px;
+        padding-top: 20px;
+        &__title {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 36px;
+            color: $color-20;
+            @media screen and (max-width: 768px) {
+                font-size: 24px;
+            }
+            @media screen and (max-width: 425px) {
+                font-size: 20px;
+            }
+        }
+        &__close-button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            cursor: pointer;
+            border: none;
+            outline: none;
+            background: none;
+        }
+    }
+    &__body {
+        display: flex;
+        flex-direction: column;
+        margin-top: 40px;
+        .select {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            select {
+                width: 80%;
+                margin-bottom: 40px;
+                padding: 20px 0;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                cursor: pointer;
+                border: none;
+                color: $color-10;
+                @media screen and (max-width: 768px) {
+                    font-size: 16px;
+                }
+                @media screen and (max-width: 425px) {
+                    font-size: 14px;
+                }
+            }
+        }
+        &__button {
+            width: 50%;
+            margin: 60px auto 40px auto;
+            background-color: $color-30;
+            border-radius: 5px;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            text-align: center;
+            color: $color-90;
+            padding: 15px;
+            outline: none;
+            border: none;
+            cursor: pointer;
+            &:hover {
+                background-color: $color-20;
+            }
+            @media screen and (max-width: 768px) {
+                margin: 80px auto 20px auto;
+            }
+            @media screen and (max-width: 425px) {
+                margin: 90px auto 10px auto;
+            }
+        }
+    }
+}
+
+.no-group.nonvisible {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.pop-up.active {
+    opacity: 1;
+    visibility: visible;
 }
