--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -105,6 +105,7 @@ a {
         outline: none;
         border: none;
         transition: background-color 200ms ease-in;
+        cursor: pointer;
 
         @media screen and (max-width: 660px) {
             padding: 9px 16px 9px;
