--- a/src/style/month.scss
+++ b/src/style/month.scss
@@ -500,4 +500,198 @@
             }
         }
     }
+
+    &__popup {
+        position: absolute;
+        box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.25);
+        border-radius: 5px;
+        background: $color-80;
+        width: 80%;
+        height: 70%;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        visibility: hidden;
+        opacity: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        transition: opacity 250ms ease-in-out;
+
+        @media screen and (min-width: 860px) {
+            display: none;
+        }
+
+        &__date {
+            font-size: 22px;
+            text-transform: uppercase;
+            color: $color-20;
+        }
+
+        &__weekday {
+            font-size: 12px;
+            color: $color-60;
+        }
+
+        &__container {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+        }
+
+        &__class {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+
+            &--sub {
+                width: 50%;
+            }
+
+            &--empty {
+                justify-content: center;
+            }
+
+            &__full {
+                align-self: center;
+                height: 0.5px;
+                width: 30%;
+                background-color: $color-10;
+            }
+
+            &__container {
+                display: flex;
+                width: 100%;
+                height: 25%;
+                margin-bottom: 5px;
+                justify-content: space-between;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+
+                &--empty {
+                    padding: 20px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+
+                    p:first-child {
+                        margin-bottom: 30px;
+                    }
+                }
+            }
+
+            
+            &__subgroup {
+                font-size: 12px;
+                color: $color-10;
+
+                &__container {
+                    display: flex;
+                    justify-content: end;
+                    width: 100%;
+                    margin-bottom: 4px;
+                }
+            }
+
+            &__subgroups {
+                width: 93%;
+                display: flex;
+                justify-content: space-around;
+            }
+
+            &__group {
+                display: flex;
+                justify-content: center;
+                background: rgba($color-70, 0.2);
+                border-radius: 5px;
+                padding: 5px;
+                width: 94%;
+
+                &--red {
+                    background: rgba($color-40, 0.1);
+                }
+            }
+
+            &__divider {
+                width: 1px;
+                height: 100%;
+                background-color: $color-60;
+                margin: 0 5px;
+
+                &--light {
+                    background-color: $color-70;
+                }
+            }
+
+            &__empty {
+                height: 1px;
+                width: 30%;
+                background-color: $color-10;
+            }
+
+            &__name {
+                font-size: 13px;
+                color: $color-10;
+                text-align: center;
+            }
+
+            &__type {
+                font-size: 10px;
+                color: $color-20;
+                text-align: center;
+            }
+
+            &__professor {
+                font-size: 12px;
+                color: $color-10;
+                text-align: center;
+            }
+
+            &__place {
+                font-size: 12px;
+                color: $color-20;
+                text-align: center;
+
+                img {
+                    height: 8px;
+                }
+            }
+        }
+
+        &__time {
+            font-size: 12px;
+            width: 6%;
+            color: $color-10;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-right: 10px;
+        }
+
+        &__close-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            cursor: pointer;
+            border: none;
+            outline: none;
+            background: none;
+        }
+    }
+}
+
+.disable {
+    filter: blur(4px);
+    pointer-events: none;
 }
