--- a/src/style/today.scss
+++ b/src/style/today.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    background: $color-90;
+    background-color: #F5F3F4;
     box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     height: calc(100% - 185px);
